--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,11 @@
     @apply max-w-7xl mx-auto sm:px-6 lg:px-8;
 }
 
+.border-t-1 { border-top-width: 1px; }
+.border-b-1 { border-bottom-width: 1px; }
+.border-l-1 { border-left-width: 1px; }
+.border-r-1 { border-right-width: 1px; }
+
 .list-header {
     @apply mb-6 flex flex-row items-center sm:flex-row-reverse justify-between flex-wrap;
 }
@@ -40,4 +45,38 @@
 }
 .table td {
     @apply py-3 px-6;
+}
+
+.sb-form {
+    @apply grid sm:grid-cols-3 md:grid-cols-4 sm:divide-x bg-white rounded shadow;
+}
+.sb-sidebar {
+    @apply py-4;
+}
+.sb-container {
+    @apply sm:col-span-2 md:col-span-3;
+}
+.sb-header {
+    @apply p-4 border-b-1 border-gray-200;
+}
+.sb-header > h2 {
+    @apply text-2xl font-bold text-gray-800;
+}
+.sb-header > h5 {
+    @apply text-sm text-gray-700;
+}
+.sb-body {
+    @apply p-4;
+}
+.sb-body > .grid-2 {
+    @apply grid md:grid-cols-2 gap-4 mb-4;
+}
+.sb-body > .grid-3 {
+    @apply grid md:grid-cols-3 gap-4 mb-4;
+}
+.sb-body > .grid-4 {
+    @apply grid md:grid-cols-4 gap-4 mb-4;
+}
+.sb-footer {
+    @apply py-2 px-4 flex justify-between border-t-1 border-gray-200;
 }
