--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,11 +31,14 @@
 .table thead tr {
     @apply bg-gray-200 text-gray-600 uppercase text-sm leading-normal;
 }
+.table th {
+    @apply py-1.5 px-6;
+}
 .table th.center {
-    @apply py-2 px-6 text-center;
+    @apply text-center;
 }
 .table th.left {
-    @apply py-2 px-6 text-left;
+    @apply text-left;
 }
 .table tbody {
     @apply text-gray-600 text-sm font-light;
@@ -44,7 +47,7 @@
     @apply border-b border-gray-200 hover:bg-gray-50;
 }
 .table td {
-    @apply py-2 px-6;
+    @apply py-1.5 px-6;
 }
 
 .sb-form {
